--- a/example/package.json
+++ b/example/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "example",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://mgrin.github.io/mgr-pdf-viewer-react",
-  "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.0.0",
-    "react-scripts": "1.0.14"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  }
+    "name": "example",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "https://ansu5555.github.io/pdf-viewer-reactjs/",
+    "dependencies": {
+        "pdf-viewer-reactjs": "file:..",
+        "react": "^16.0.0",
+        "react-dom": "^16.0.0"
+    },
+    "devDependencies": {
+        "gh-pages": "^1.0.0",
+        "react-scripts": "^3.0.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    }
 }
