--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-  "short_name": "Mgr-pdf-viewer-react",
-  "name": "mgr-pdf-viewer-react examples",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
-  "start_url": "./index.html",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    "short_name": "pdf-viewer-reactjs",
+    "name": "pdf-viewer-reactjs examples",
+    "icons": [
+        {
+            "src": "favicon.ico",
+            "sizes": "192x192",
+            "type": "image/png"
+        }
+    ],
+    "start_url": "./index.html",
+    "display": "standalone",
+    "theme_color": "#000000",
+    "background_color": "#ffffff"
 }
